force-app/main/default/objects/Property__c/fields/Market_Value_Year__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_Year__c</fullName>
    <label>Market Value Year</label>
    <length>80</length>
    <type>Text</type>
</CustomField>