force-app/main/default/objects/Property__c/fields/Price_Range_Max__c.field-meta.xml
<CustomField>
    <fullName>Price_Range_Max__c</fullName>
    <label>Price Range Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>