force-app/main/default/objects/Property__c/fields/Property_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_City__c</fullName>
    <label>Property Address City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>