force-app/main/default/objects/Property__c/fields/Property_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_Country__c</fullName>
    <label>Property Address Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>