force-app/main/default/objects/Property__c/fields/Property_Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_Postal_Code__c</fullName>
    <label>Property Address Postal Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>