force-app/main/default/objects/Property__c/fields/Property_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_Street__c</fullName>
    <label>Property Address Street</label>
    <type>TextArea</type>
</CustomField>