force-app/main/default/objects/Property__c/fields/Property_AddressState__c.field-meta.xml
<CustomField>
    <fullName>Property_AddressState__c</fullName>
    <label>Property AddressState</label>
    <length>80</length>
    <type>Text</type>
</CustomField>