force-app/main/default/objects/Property__c/fields/Property_Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Property_Confidence_Score__c</fullName>
    <label>Property Confidence Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>