force-app/main/default/objects/Property__c/fields/Property_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>Property_Type_Category__c</fullName>
    <label>Property Type Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Agricultural</fullName>
            </value>
            <value>
                <fullName>Special Purpose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>