force-app/main/default/objects/Property__c/fields/Property_Type_Detail__c.field-meta.xml
<CustomField>
    <fullName>Property_Type_Detail__c</fullName>
    <label>Property Type Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Family</fullName>
            </value>
            <value>
                <fullName>Multi Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>