force-app/main/default/objects/Property__c/fields/Total_Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Value__c</fullName>
    <label>Total Estimated Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>